--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,10 @@ dependencies = [
     "pillow (>=11.1.0,<12.0.0)",
     "redis (>=5.2.1,<6.0.0)",
     "celery (>=5.4.0,<6.0.0)",
-    "django-cors-headers (>=4.7.0,<5.0.0)"
+    "django-cors-headers (>=4.7.0,<5.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
+    "psycopg (>=3.2.6,<4.0.0)"
 ]
 
 
