--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "django-cors-headers (>=4.7.0,<5.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
-    "psycopg (>=3.2.6,<4.0.0)"
+    "psycopg (>=3.2.6,<4.0.0)",
+    "pandas (>=2.2.3,<3.0.0)"
 ]
 
 
